add support for direct data measurements (#36)
